tests/errors/self_block_new.dang
# Test: new() cannot appear inside a self { } block.
type Thing {
  self {
    new(raw: String!) {
      raw
    }
  }
}
